
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int randsopts ;
typedef int randcalls ;
typedef int buf ;


 int const AF_APPLETALK ;
 int const SOL_SOCKET ;
 int const __NR_access ;
 int const __NR_close ;
 int const __NR_dup ;
 int const __NR_dup2 ;
 int const __NR_fcntl ;
 int const __NR_flock ;
 int const __NR_getcwd ;
 int const __NR_getdents ;
 int const __NR_getegid ;
 int const __NR_geteuid ;
 int const __NR_getgid ;
 int const __NR_getgroups ;
 int const __NR_getitimer ;
 int const __NR_getpgid ;
 int const __NR_getpgrp ;
 int const __NR_getpid ;
 int const __NR_getppid ;
 int const __NR_getpriority ;
 int const __NR_getresgid ;
 int const __NR_getresuid ;
 int const __NR_getrlimit ;
 int const __NR_getsid ;
 int const __NR_gettimeofday ;
 int const __NR_getuid ;
 int const __NR_ioctl ;
 int const __NR_lseek ;
 int const __NR_lstat ;
 int const __NR_mremap ;
 int const __NR_open ;
 int const __NR_pipe ;
 int const __NR_read ;
 int const __NR_rt_sigaction ;
 int const __NR_rt_sigprocmask ;
 int const __NR_sched_get_priority_max ;
 int const __NR_sched_getparam ;
 int const __NR_sched_yield ;
 int const __NR_setitimer ;
 int const __NR_stat ;
 int const __NR_write ;
 int getsockopt (int,int const,int,char**,int*) ;
 int rand () ;
 int setsockopt (int,int const,int,char**,int) ;
 int syscall (int const) ;

void kernop(int fd)
{


    const int randcalls[] = {
        __NR_read, __NR_write, __NR_open, __NR_close, __NR_stat, __NR_lstat,
        __NR_lseek, __NR_rt_sigaction, __NR_rt_sigprocmask, __NR_ioctl,
        __NR_access, __NR_pipe, __NR_sched_yield, __NR_mremap, __NR_dup,
        __NR_dup2, __NR_getitimer, __NR_setitimer, __NR_getpid, __NR_fcntl,
        __NR_flock, __NR_getdents, __NR_getcwd, __NR_gettimeofday,
        __NR_getrlimit, __NR_getuid, __NR_getgid, __NR_geteuid, __NR_getegid,
        __NR_getppid, __NR_getpgrp, __NR_getgroups, __NR_getresuid,
        __NR_getresgid, __NR_getpgid, __NR_getsid,__NR_getpriority,
        __NR_sched_getparam, __NR_sched_get_priority_max
    };
    const int randsopts[] = { SOL_SOCKET, AF_APPLETALK };
    int ret, len;
    char buf[1024];

    do
    {
        switch ( rand() % 3 )
        {
            case 0:
                ret = syscall(randcalls[rand() % sizeof(randcalls)/sizeof(randcalls[0])]);
                break;
            case 1:
                len = (rand() % 2) ? sizeof(int) : sizeof(buf);
                ret = getsockopt(fd, randsopts[rand() % sizeof(randsopts)/sizeof(randsopts[0])], rand() % 130, &buf, &len);
                break;
            case 2:
                len = (rand() % 2) ? sizeof(int) : sizeof(buf);
                ret = setsockopt(fd, randsopts[rand() % sizeof(randsopts)/sizeof(randsopts[0])], rand() % 130, &buf, len);
                break;
        }
    }
    while ( ret < 0 );
}
