; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_9521.c_kernop.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_9521.c_kernop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__NR_read = common dso_local global i32 0, align 4
@__NR_write = common dso_local global i32 0, align 4
@__NR_open = common dso_local global i32 0, align 4
@__NR_close = common dso_local global i32 0, align 4
@__NR_stat = common dso_local global i32 0, align 4
@__NR_lstat = common dso_local global i32 0, align 4
@__NR_lseek = common dso_local global i32 0, align 4
@__NR_rt_sigaction = common dso_local global i32 0, align 4
@__NR_rt_sigprocmask = common dso_local global i32 0, align 4
@__NR_ioctl = common dso_local global i32 0, align 4
@__NR_access = common dso_local global i32 0, align 4
@__NR_pipe = common dso_local global i32 0, align 4
@__NR_sched_yield = common dso_local global i32 0, align 4
@__NR_mremap = common dso_local global i32 0, align 4
@__NR_dup = common dso_local global i32 0, align 4
@__NR_dup2 = common dso_local global i32 0, align 4
@__NR_getitimer = common dso_local global i32 0, align 4
@__NR_setitimer = common dso_local global i32 0, align 4
@__NR_getpid = common dso_local global i32 0, align 4
@__NR_fcntl = common dso_local global i32 0, align 4
@__NR_flock = common dso_local global i32 0, align 4
@__NR_getdents = common dso_local global i32 0, align 4
@__NR_getcwd = common dso_local global i32 0, align 4
@__NR_gettimeofday = common dso_local global i32 0, align 4
@__NR_getrlimit = common dso_local global i32 0, align 4
@__NR_getuid = common dso_local global i32 0, align 4
@__NR_getgid = common dso_local global i32 0, align 4
@__NR_geteuid = common dso_local global i32 0, align 4
@__NR_getegid = common dso_local global i32 0, align 4
@__NR_getppid = common dso_local global i32 0, align 4
@__NR_getpgrp = common dso_local global i32 0, align 4
@__NR_getgroups = common dso_local global i32 0, align 4
@__NR_getresuid = common dso_local global i32 0, align 4
@__NR_getresgid = common dso_local global i32 0, align 4
@__NR_getpgid = common dso_local global i32 0, align 4
@__NR_getsid = common dso_local global i32 0, align 4
@__NR_getpriority = common dso_local global i32 0, align 4
@__NR_sched_getparam = common dso_local global i32 0, align 4
@__NR_sched_get_priority_max = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@AF_APPLETALK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kernop(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [39 x i32], align 16
  %4 = alloca [2 x i32], align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [1024 x i8], align 16
  store i32 %0, i32* %2, align 4
  %8 = getelementptr inbounds [39 x i32], [39 x i32]* %3, i64 0, i64 0
  %9 = load i32, i32* @__NR_read, align 4
  store i32 %9, i32* %8, align 4
  %10 = getelementptr inbounds i32, i32* %8, i64 1
  %11 = load i32, i32* @__NR_write, align 4
  store i32 %11, i32* %10, align 4
  %12 = getelementptr inbounds i32, i32* %10, i64 1
  %13 = load i32, i32* @__NR_open, align 4
  store i32 %13, i32* %12, align 4
  %14 = getelementptr inbounds i32, i32* %12, i64 1
  %15 = load i32, i32* @__NR_close, align 4
  store i32 %15, i32* %14, align 4
  %16 = getelementptr inbounds i32, i32* %14, i64 1
  %17 = load i32, i32* @__NR_stat, align 4
  store i32 %17, i32* %16, align 4
  %18 = getelementptr inbounds i32, i32* %16, i64 1
  %19 = load i32, i32* @__NR_lstat, align 4
  store i32 %19, i32* %18, align 4
  %20 = getelementptr inbounds i32, i32* %18, i64 1
  %21 = load i32, i32* @__NR_lseek, align 4
  store i32 %21, i32* %20, align 4
  %22 = getelementptr inbounds i32, i32* %20, i64 1
  %23 = load i32, i32* @__NR_rt_sigaction, align 4
  store i32 %23, i32* %22, align 4
  %24 = getelementptr inbounds i32, i32* %22, i64 1
  %25 = load i32, i32* @__NR_rt_sigprocmask, align 4
  store i32 %25, i32* %24, align 4
  %26 = getelementptr inbounds i32, i32* %24, i64 1
  %27 = load i32, i32* @__NR_ioctl, align 4
  store i32 %27, i32* %26, align 4
  %28 = getelementptr inbounds i32, i32* %26, i64 1
  %29 = load i32, i32* @__NR_access, align 4
  store i32 %29, i32* %28, align 4
  %30 = getelementptr inbounds i32, i32* %28, i64 1
  %31 = load i32, i32* @__NR_pipe, align 4
  store i32 %31, i32* %30, align 4
  %32 = getelementptr inbounds i32, i32* %30, i64 1
  %33 = load i32, i32* @__NR_sched_yield, align 4
  store i32 %33, i32* %32, align 4
  %34 = getelementptr inbounds i32, i32* %32, i64 1
  %35 = load i32, i32* @__NR_mremap, align 4
  store i32 %35, i32* %34, align 4
  %36 = getelementptr inbounds i32, i32* %34, i64 1
  %37 = load i32, i32* @__NR_dup, align 4
  store i32 %37, i32* %36, align 4
  %38 = getelementptr inbounds i32, i32* %36, i64 1
  %39 = load i32, i32* @__NR_dup2, align 4
  store i32 %39, i32* %38, align 4
  %40 = getelementptr inbounds i32, i32* %38, i64 1
  %41 = load i32, i32* @__NR_getitimer, align 4
  store i32 %41, i32* %40, align 4
  %42 = getelementptr inbounds i32, i32* %40, i64 1
  %43 = load i32, i32* @__NR_setitimer, align 4
  store i32 %43, i32* %42, align 4
  %44 = getelementptr inbounds i32, i32* %42, i64 1
  %45 = load i32, i32* @__NR_getpid, align 4
  store i32 %45, i32* %44, align 4
  %46 = getelementptr inbounds i32, i32* %44, i64 1
  %47 = load i32, i32* @__NR_fcntl, align 4
  store i32 %47, i32* %46, align 4
  %48 = getelementptr inbounds i32, i32* %46, i64 1
  %49 = load i32, i32* @__NR_flock, align 4
  store i32 %49, i32* %48, align 4
  %50 = getelementptr inbounds i32, i32* %48, i64 1
  %51 = load i32, i32* @__NR_getdents, align 4
  store i32 %51, i32* %50, align 4
  %52 = getelementptr inbounds i32, i32* %50, i64 1
  %53 = load i32, i32* @__NR_getcwd, align 4
  store i32 %53, i32* %52, align 4
  %54 = getelementptr inbounds i32, i32* %52, i64 1
  %55 = load i32, i32* @__NR_gettimeofday, align 4
  store i32 %55, i32* %54, align 4
  %56 = getelementptr inbounds i32, i32* %54, i64 1
  %57 = load i32, i32* @__NR_getrlimit, align 4
  store i32 %57, i32* %56, align 4
  %58 = getelementptr inbounds i32, i32* %56, i64 1
  %59 = load i32, i32* @__NR_getuid, align 4
  store i32 %59, i32* %58, align 4
  %60 = getelementptr inbounds i32, i32* %58, i64 1
  %61 = load i32, i32* @__NR_getgid, align 4
  store i32 %61, i32* %60, align 4
  %62 = getelementptr inbounds i32, i32* %60, i64 1
  %63 = load i32, i32* @__NR_geteuid, align 4
  store i32 %63, i32* %62, align 4
  %64 = getelementptr inbounds i32, i32* %62, i64 1
  %65 = load i32, i32* @__NR_getegid, align 4
  store i32 %65, i32* %64, align 4
  %66 = getelementptr inbounds i32, i32* %64, i64 1
  %67 = load i32, i32* @__NR_getppid, align 4
  store i32 %67, i32* %66, align 4
  %68 = getelementptr inbounds i32, i32* %66, i64 1
  %69 = load i32, i32* @__NR_getpgrp, align 4
  store i32 %69, i32* %68, align 4
  %70 = getelementptr inbounds i32, i32* %68, i64 1
  %71 = load i32, i32* @__NR_getgroups, align 4
  store i32 %71, i32* %70, align 4
  %72 = getelementptr inbounds i32, i32* %70, i64 1
  %73 = load i32, i32* @__NR_getresuid, align 4
  store i32 %73, i32* %72, align 4
  %74 = getelementptr inbounds i32, i32* %72, i64 1
  %75 = load i32, i32* @__NR_getresgid, align 4
  store i32 %75, i32* %74, align 4
  %76 = getelementptr inbounds i32, i32* %74, i64 1
  %77 = load i32, i32* @__NR_getpgid, align 4
  store i32 %77, i32* %76, align 4
  %78 = getelementptr inbounds i32, i32* %76, i64 1
  %79 = load i32, i32* @__NR_getsid, align 4
  store i32 %79, i32* %78, align 4
  %80 = getelementptr inbounds i32, i32* %78, i64 1
  %81 = load i32, i32* @__NR_getpriority, align 4
  store i32 %81, i32* %80, align 4
  %82 = getelementptr inbounds i32, i32* %80, i64 1
  %83 = load i32, i32* @__NR_sched_getparam, align 4
  store i32 %83, i32* %82, align 4
  %84 = getelementptr inbounds i32, i32* %82, i64 1
  %85 = load i32, i32* @__NR_sched_get_priority_max, align 4
  store i32 %85, i32* %84, align 4
  %86 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 0
  %87 = load i32, i32* @SOL_SOCKET, align 4
  store i32 %87, i32* %86, align 4
  %88 = getelementptr inbounds i32, i32* %86, i64 1
  %89 = load i32, i32* @AF_APPLETALK, align 4
  store i32 %89, i32* %88, align 4
  br label %90

90:                                               ; preds = %139, %1
  %91 = call i32 (...) @rand()
  %92 = srem i32 %91, 3
  switch i32 %92, label %138 [
    i32 0, label %93
    i32 1, label %101
    i32 2, label %119
  ]

93:                                               ; preds = %90
  %94 = call i32 (...) @rand()
  %95 = sext i32 %94 to i64
  %96 = urem i64 %95, 156
  %97 = udiv i64 %96, 4
  %98 = getelementptr inbounds [39 x i32], [39 x i32]* %3, i64 0, i64 %97
  %99 = load i32, i32* %98, align 4
  %100 = call i32 @syscall(i32 %99)
  store i32 %100, i32* %5, align 4
  br label %138

101:                                              ; preds = %90
  %102 = call i32 (...) @rand()
  %103 = srem i32 %102, 2
  %104 = icmp ne i32 %103, 0
  %105 = zext i1 %104 to i64
  %106 = select i1 %104, i64 4, i64 1024
  %107 = trunc i64 %106 to i32
  store i32 %107, i32* %6, align 4
  %108 = load i32, i32* %2, align 4
  %109 = call i32 (...) @rand()
  %110 = sext i32 %109 to i64
  %111 = urem i64 %110, 8
  %112 = udiv i64 %111, 4
  %113 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 %112
  %114 = load i32, i32* %113, align 4
  %115 = call i32 (...) @rand()
  %116 = srem i32 %115, 130
  %117 = bitcast [1024 x i8]* %7 to i8**
  %118 = call i32 @getsockopt(i32 %108, i32 %114, i32 %116, i8** %117, i32* %6)
  store i32 %118, i32* %5, align 4
  br label %138

119:                                              ; preds = %90
  %120 = call i32 (...) @rand()
  %121 = srem i32 %120, 2
  %122 = icmp ne i32 %121, 0
  %123 = zext i1 %122 to i64
  %124 = select i1 %122, i64 4, i64 1024
  %125 = trunc i64 %124 to i32
  store i32 %125, i32* %6, align 4
  %126 = load i32, i32* %2, align 4
  %127 = call i32 (...) @rand()
  %128 = sext i32 %127 to i64
  %129 = urem i64 %128, 8
  %130 = udiv i64 %129, 4
  %131 = getelementptr inbounds [2 x i32], [2 x i32]* %4, i64 0, i64 %130
  %132 = load i32, i32* %131, align 4
  %133 = call i32 (...) @rand()
  %134 = srem i32 %133, 130
  %135 = bitcast [1024 x i8]* %7 to i8**
  %136 = load i32, i32* %6, align 4
  %137 = call i32 @setsockopt(i32 %126, i32 %132, i32 %134, i8** %135, i32 %136)
  store i32 %137, i32* %5, align 4
  br label %138

138:                                              ; preds = %90, %119, %101, %93
  br label %139

139:                                              ; preds = %138
  %140 = load i32, i32* %5, align 4
  %141 = icmp slt i32 %140, 0
  br i1 %141, label %90, label %142

142:                                              ; preds = %139
  ret void
}

declare dso_local i32 @rand(...) #1

declare dso_local i32 @syscall(i32) #1

declare dso_local i32 @getsockopt(i32, i32, i32, i8**, i32*) #1

declare dso_local i32 @setsockopt(i32, i32, i32, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
